--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,15 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/namastejavascript/index.js",
-            "request": "launch",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node"
-        }
+        // {
+        //     "name": "Launch Program",
+        //     "program": "${workspaceFolder}/namastejavascript/index.js",
+        //     "request": "launch",
+        //     "skipFiles": [
+        //         "<node_internals>/**"
+        //     ],
+        //     "type": "pwa-node"
+        // }
         
         
     
